Extend async search keep alive